--- a/public/css/eleve.css
+++ b/public/css/eleve.css
@@ -138,9 +138,6 @@ background:url('/public/css/images/h2-eleve-exercice-recapitulatif-infos.png') t
 h2.eleve-exercice-recapitulatif-fichiers {
 background:url('/public/css/images/h2-eleve-exercice-recapitulatif-fichiers.png') top left scroll no-repeat;
 }
-h2.eleve-options-compte {
-background:url('/public/css/images/h2-eleve-options-compte.png') top left scroll no-repeat;
-}
 /*---------------------------------------------------------------------------------------------------------------------------------------------*/
 /*----------------------------------------------------- 6. Les Forumlaires --------------------------------------------------------------------*/
 /*---------------------------------------------------------------------------------------------------------------------------------------------*/
